// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FunctionExpression > client > should skip top-level values for scope 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "dismantle/runtime";
import { server$ } from 'my-example';
import { value } from "./example.ts?my-example=0.ts";
const outer = () => {
  const example = $$server_1( /*@dismantle skip*/async () => {
    const source_1 = (await import("./example.ts?my-example=1.ts")).default;
    return async function (...rest_1) {
      const [type_1, result_1] = await $$func_1(source_1, null)([], ...rest_1);
      return result_1;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export const value = 'foo bar';",
      "map": {
        "file": undefined,
        "mappings": "aAEYA,KAAK,GAAG,SAAS",
        "names": [
          "value",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { registerServerFunction as entry_1 } from "my-example/server";
export default entry_1("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AAAC,SAAAC,KAAA;AAErC,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,OAAO,GAAAC,UAAA;IAAA,MAAAC,QAAA,kDAAAC,OAAA;IAAA,0BAAAC,MAAA;MAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA,eAAAE,MAAA;MAAA,OAAAE,QAAA;IAAA;EAAA,EAEX;AACJ,CAAC",
    "names": [
      "server$",
      "value",
      "outer",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const value = 'foo bar';
      const outer = () => {
        const example = server$(function () {
          return value;
        });
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`FunctionExpression > client > should transform valid server functions 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "dismantle/runtime";
import { server$ } from 'my-example';
const example = $$server_1( /*@dismantle skip*/async () => {
  const source_1 = (await import("./example.ts?my-example=0.ts")).default;
  return async function (...rest_1) {
    const [type_1, result_1] = await $$func_1(source_1, null)([], ...rest_1);
    return result_1;
  };
});",
  "entries": [
    "/path/to/example.ts?my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "import { registerServerFunction as entry_1 } from "my-example/server";
export default entry_1("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AACpC,MAAMC,OAAO,GAAAC,UAAA;EAAA,MAAAC,QAAA,kDAAAC,OAAA;EAAA,0BAAAC,MAAA;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA,eAAAE,MAAA;IAAA,OAAAE,QAAA;EAAA;AAAA,EAEX",
    "names": [
      "server$",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const example = server$(function () {
        return 'foo bar';
      });
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`FunctionExpression > client > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "dismantle/runtime";
import { server$ } from 'my-example';
const outer = () => {
  const value = 'foo bar';
  const example = $$server_1( /*@dismantle skip*/async () => {
    const source_1 = (await import("./example.ts?my-example=0.ts")).default;
    return async function (...rest_1) {
      const [type_1, result_1] = await $$func_1(source_1, null)([value], ...rest_1);
      return result_1;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "import { registerServerFunction as entry_1 } from "my-example/server";
export default entry_1("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AACpC,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,MAAMC,OAAO,GAAAC,UAAA;IAAA,MAAAC,QAAA,kDAAAC,OAAA;IAAA,0BAAAC,MAAA;MAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA,SADPH,KAAK,MAAAK,MAAA;MAAA,OAAAE,QAAA;IAAA;EAAA,EAGT;AACJ,CAAC",
    "names": [
      "server$",
      "outer",
      "value",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const outer = () => {
        const value = 'foo bar';
        const example = server$(function () {
          return value;
        });
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`FunctionExpression > server > should skip top-level values for scope 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "dismantle/runtime";
import { server$ } from 'my-example';
import { value } from "./example.ts?my-example=0.ts";
const outer = () => {
  const example = $$server_1( /*@dismantle skip*/async () => {
    const source_1 = (await import("./example.ts?my-example=2.ts")).default;
    return async function (...rest_1) {
      const [type_1, result_1] = await $$func_1(source_1, null)([], ...rest_1);
      return result_1;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?my-example=2.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export const value = 'foo bar';",
      "map": {
        "file": undefined,
        "mappings": "aAEYA,KAAK,GAAG,SAAS",
        "names": [
          "value",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { value } from "./example.ts?my-example=0.ts";
export default (function ([]) {
  try {
    return [2, value];
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": ";8BAI4C;EAAA;IAAA,WAC3BA,KAAK;EAAA,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AACd,CAAC",
        "names": [
          "value",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=2.ts" => {
      "code": "import { registerServerFunction as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=1.ts";
export default entry_1("26ecc3a5-0-example", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AAAC,SAAAC,KAAA;AAErC,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,OAAO,GAAAC,UAAA;IAAA,MAAAC,QAAA,kDAAAC,OAAA;IAAA,0BAAAC,MAAA;MAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA,eAAAE,MAAA;MAAA,OAAAE,QAAA;IAAA;EAAA,EAEX;AACJ,CAAC",
    "names": [
      "server$",
      "value",
      "outer",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const value = 'foo bar';
      const outer = () => {
        const example = server$(function () {
          return value;
        });
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=1.ts",
  ],
}
`;

exports[`FunctionExpression > server > should transform valid server functions 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "dismantle/runtime";
import { server$ } from 'my-example';
const example = $$server_1( /*@dismantle skip*/async () => {
  const source_1 = (await import("./example.ts?my-example=1.ts")).default;
  return async function (...rest_1) {
    const [type_1, result_1] = await $$func_1(source_1, null)([], ...rest_1);
    return result_1;
  };
});",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (function ([]) {
  try {
    return [2, 'foo bar'];
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "8BAE0C;EAAA;IAAA,WAC3B,SAAS;EAAA,SAAAA,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAClB,CAAC",
        "names": [
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { registerServerFunction as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=0.ts";
export default entry_1("26ecc3a5-0-example", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AACpC,MAAMC,OAAO,GAAAC,UAAA;EAAA,MAAAC,QAAA,kDAAAC,OAAA;EAAA,0BAAAC,MAAA;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA,eAAAE,MAAA;IAAA,OAAAE,QAAA;EAAA;AAAA,EAEX",
    "names": [
      "server$",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const example = server$(function () {
        return 'foo bar';
      });
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`FunctionExpression > server > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "dismantle/runtime";
import { server$ } from 'my-example';
const outer = () => {
  const value = 'foo bar';
  const example = $$server_1( /*@dismantle skip*/async () => {
    const source_1 = (await import("./example.ts?my-example=1.ts")).default;
    return async function (...rest_1) {
      const [type_1, result_1] = await $$func_1(source_1, null)([value], ...rest_1);
      return result_1;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (function ([value]) {
  try {
    return [2, value];
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "2BAGcA,KAAK,GACyB;EAAA;IAAA,WAC3BA,KAAK;EAAA,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AACd,CAAC",
        "names": [
          "value",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { registerServerFunction as entry_1 } from "my-example/server";
import root_1 from "./example.ts?my-example=0.ts";
export default entry_1("26ecc3a5-0-example", root_1);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AACpC,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,MAAMC,OAAO,GAAAC,UAAA;IAAA,MAAAC,QAAA,kDAAAC,OAAA;IAAA,0BAAAC,MAAA;MAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA,SADPH,KAAK,MAAAK,MAAA;MAAA,OAAAE,QAAA;IAAA;EAAA,EAGT;AACJ,CAAC",
    "names": [
      "server$",
      "outer",
      "value",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const outer = () => {
        const value = 'foo bar';
        const example = server$(function () {
          return value;
        });
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;
